--- a/SobreMim.html
+++ b/SobreMim.html
@@ -3,17 +3,29 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>SobreMim</title>
     <link rel="stylesheet" href="Style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
 
-  <body style="align-items: center; justify-content: center; background-image: url(img/Backgorund.jpg); background-size: 100%;">
+  <body style="align-items: center; justify-content: center; background-image: url(img/Backgorund.jpg); background-size: 100%;  background-size: cover;">
 
-    <div class="d-grid gap-2 d-md-flex justify-content-md-end" style="margin-top: 50px;">
-      <a href="index.html"><button class="btn btn-primary me-md-2" type="button">Inicio</button></a>
-      <a href="Experiencias.html"><button class="btn btn-primary" type="button" style="margin-right: 100px;">Experiências</button></a>
-    </div>
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark sticky-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link" href="SobreMim.html">Sobre Mim</a>
+            <a class="nav-link" href="Experiencias.html">Informações Tecnicas</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+
 
     <div style="background-color: #C5D3E8; position: relative;" class="body_Center">
         <h3 style="margin-left: 100px; margin-right: 100px; text-align: justify;">Me chamo Ryan Henrique Alves Bezerra e tenho 21 anos, estudei em uma escola técnica durante o ensino médio que me 
@@ -31,7 +43,7 @@
         </h3>
     </div>
 
-
+    <footer class="p-1 text-light text-end sticky-botton">Email: Ryan.henrique@gmail.com   Número: (81) 98667-9695</footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
