--- a/index.html
+++ b/index.html
@@ -7,24 +7,34 @@
     <link rel="stylesheet" href="Style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
-  <body style="height: 100%; background-image: url(img/Backgorund.jpg); background-size: 100%;">
+  <body style="height: 100%; background-image: url(img/Backgorund.jpg); background-size: 100%; background-size: cover;">
+
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark sticky-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link" href="SobreMim.html">Sobre Mim</a>
+            <a class="nav-link" href="Experiencias.html">Informações Tecnicas</a>
+          </div>
+        </div>
+      </div>
+    </nav>
     
 
-    <div style="height: 94%; width: 100%; align-items: center; justify-content: center; display: flex;">
+    <div style="height: 87%; width: 100%; align-items: center; justify-content: center; display: flex;">
 
         <h1 class="display-1" style="text-align: center; color: black;">Ryan Henrique</h1>
 
 
     </div>
 
-    <div style="align-items: center; justify-content: center; display: flex; position: relative;">
 
-      <a href="SobreMim.html"><button type="button" class="btn btn-info" style="height: 50px; background-color: #c758fe;">Sobre Mim</button></a>
-      <a href="Experiencias.html"><button type="button" class="btn btn-info" style="margin-left: 35px; height: 50px; background-color: #c758fe;">Experiências</button></a>
-
-
-    </div>
-
+    <footer class="p-1 text-light text-end sticky-botton">Email: Ryan.henrique@gmail.com   Número: (81) 98667-9695</footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
