--- a/Experiencias.html
+++ b/Experiencias.html
@@ -18,9 +18,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link" aria-current="page" href="index.html">Home</a>
             <a class="nav-link" href="SobreMim.html">Sobre Mim</a>
-            <a class="nav-link" href="Experiencias.html">Informações Tecnicas</a>
+            <a class="nav-link active" href="Experiencias.html">Informações Tecnicas</a>
           </div>
         </div>
       </div>
@@ -35,23 +35,25 @@
         <div class="card-body" style="margin-left: 100px; margin-right: 100px; text-align: justify;">
             <h3 class="card-title">Com Dominio Digital 4.0 (CDD)</h3>
             <br>
-            <h5 class="card-text">  Esta formação me proporcionou muito aprendizado, foi nela ond eu tive meu primeiro contato com Python e banco de dados, também me ajudou bastante
+            <p class="card-text">  Esta formação me proporcionou muito aprendizado, foi nela ond eu tive meu primeiro contato com Python e banco de dados, também me ajudou bastante
                 a desenvolver minhas competências socioemocionais e para mim essa foi uma dar partes mais importantes dessa formação
-            </h5>
+            </p>
           </div>
     </div>
+
+    <br><br>
 
     <div style="background-color: #C5D3E8; position: relative;" class="body_Center">
       <div class="card-body" style="margin-left: 100px; margin-right: 100px; text-align: justify;">
         <h3 class="card-title">Java web com Spring Boot e Frontend</h3>
         <br>
-        <h5 class="card-text">  Essa formnação teve uma duração de 1 mês com o intuito de preparar jovens para se tornarem desenvolvedores 
+        <p class="card-text">  Essa formnação teve uma duração de 1 mês com o intuito de preparar jovens para se tornarem desenvolvedores 
           Full Stack. Essa formação foi dividida em 2 etapas, onde a primeira etapa seriam dadas aulas de Backend e Frontend, o Backend 
           era utilizado como linguagem o java com o Springboot, enquanto no Frontend aprendiamos HTML, CSS, JavaScript com o auxilio do 
           Framework Bootstrap. 
-        </h5>
-        <h5>Na segunda etapa da formação tivemos que desenvolver uma aplicação web de agendamento colocando em prática 
-          todo o conhecimento aprendido.</h5>
+        </p>
+        <p>Na segunda etapa da formação tivemos que desenvolver uma aplicação web de agendamento colocando em prática 
+          todo o conhecimento aprendido.</p>
       </div>
     </div>
 
@@ -71,6 +73,7 @@
       </div>
     </div>
 
+    <br><br>
 
     <div style="background-color: #C5D3E8; position: relative;" class="body_Center">
       <div class="card-body" style="margin-left: 100px; margin-right: 100px; text-align: justify;">
@@ -106,7 +109,7 @@
     </div>
     
 
-    <footer class="p-1 text-light text-end sticky-botton">Email: Ryan.henrique@gmail.com   Número: (81) 98667-9695</footer>
+    <footer class="p-1 text-light text-end sticky-botton fixed-bottom">Email: Ryan.henrique@gmail.com   Número: (81) 98667-9695</footer>
 
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
