--- a/SobreMim.html
+++ b/SobreMim.html
@@ -18,8 +18,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-            <a class="nav-link" href="SobreMim.html">Sobre Mim</a>
+            <a class="nav-link" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link active" href="SobreMim.html">Sobre Mim</a>
             <a class="nav-link" href="Experiencias.html">Informações Tecnicas</a>
           </div>
         </div>
@@ -28,22 +28,22 @@
 
 
     <div style="background-color: #C5D3E8; position: relative;" class="body_Center">
-        <h3 style="margin-left: 100px; margin-right: 100px; text-align: justify;">Me chamo Ryan Henrique Alves Bezerra e tenho 21 anos, estudei em uma escola técnica durante o ensino médio que me 
+        <p style="margin-left: 100px; margin-right: 100px; text-align: justify;">Me chamo Ryan Henrique Alves Bezerra e tenho 21 anos, estudei em uma escola técnica durante o ensino médio que me 
           proporcionou um curso técnico em redes de computadores, e foi durante esse curso que me inseri no mundo da tecnologia.
           
-        </h3>
-        <h3 style="margin-left: 100px; margin-right: 100px; text-align: justify;">
+        </p>
+        <p style="margin-left: 100px; margin-right: 100px; text-align: justify;">
           Ao fim do ensino médio tive a oportunidade de cursar outros 2 cursos, sendo eles o Com Dominio Digital 4.0(CDD) e um curso de Java web com Spring Boot e FrontEnd. Nesses
           cursos tive a oportunidade de aprender mais sobre algumas linguagens de programação como Python e Java. Além disso também aprendi a desenvolver minhas competências socioemocionais
           e a como lidar com as próprias emoções no ambiente de trabalho.
-        </h3>
-        <h3 style="margin-left: 100px; margin-right: 100px; text-align: justify;">
+        </p>
+        <p style="margin-left: 100px; margin-right: 100px; text-align: justify;">
           Atualmente estou cursando o curso de ADS no CENTRO UNIVERSITÁRIO MAURÍCIO DE NASSAU no segundo periodo, o que me proporcionou um cargo como estágiario em analista de dados e BI, 
           onde aprendi muito mais sobre a área e venho aprendendo cada vez mais a cada dia. 
-        </h3>
+        </p>
     </div>
 
-    <footer class="p-1 text-light text-end sticky-botton">Email: Ryan.henrique@gmail.com   Número: (81) 98667-9695</footer>
+    <footer class="p-1 text-light text-end sticky-botton fixed-bottom">Email: Ryan.henrique@gmail.com   Número: (81) 98667-9695</footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
