--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 
     <div style="height: 87%; width: 100%; align-items: center; justify-content: center; display: flex;">
 
-        <h1 class="display-1" style="text-align: center; color: black;">Ryan Henrique</h1>
+        <h1 class="display-1" style="text-align: center; color: white">Ryan Henrique</h1>
 
 
     </div>
 
 
-    <footer class="p-1 text-light text-end sticky-botton">Email: Ryan.henrique@gmail.com   Número: (81) 98667-9695</footer>
+    <footer class="p-1 text-light text-end sticky-botton fixed-bottom">Email: Ryan.henrique.3226@gmail.com / Número: (81) 98667-9695</footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
